# penguin-ml-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  main.py  monitoring.py  predict.py  schemas.py
data/golden/: golden_inputs.json  golden_outputs.json
docs/adr/: 001-dataset-penguins.md  002-model-random-forest.md  003-framework-fastapi.md  004-deploy-render.md  005-ci-github-actions.md  006-serialization-joblib.md
docs/postman/: penguin-api.postman_collection.json
model/: metadata.json  pipeline.joblib
scripts/: test_live.py
tests/: conftest.py
tests/e2e/: test_golden.py
tests/integration/: test_api.py
tests/unit/: test_predict.py  test_schemas.py
training/: config.yaml  evaluate.py  train.py
